[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gsp-metrics"
description = "Collection of tools to derive metrics from gold standard phantom MR images."
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typing_extensions >=4.6.3; python_version < '4.0'",
    "fileformats-medimage-extras",
    "pydra >=1.0a7",
]

authors = [
    { name = "Hugh McCloskey", email = "Hugh.Mccloskey@sahmri.com" },
    { name = "Thomas G. Close", email = "tom.g.close@gmail.com" }
]
maintainers = [
    { name = "Hugh McCloskey", email = "Hugh.Mccloskey@sahmri.com" },
    { name = "Thomas G. Close", email = "tom.g.close@gmail.com" }
]
keywords = [
    "MRI",
    "phantom",
    "analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "codespell",
    "flake8",
    "flake8-pyproject",
    "fileformats[test]",
    "mypy >=1.5.1",
]
test = [
    "mypy >=1.5.1",
    "pytest >=6.2.5",
    "pytest-env>=0.6.2",
    "pytest-cov>=2.12.1",
]
docs = [
    "packaging",
    "docutils>=0.10",
    "mock>1.0",
    "sphinx >=2.1.2",
    "sphinx-argparse>=0.2.0",
    "sphinx-click>=3.1",
    "furo>=2022.2.14.1",
    "numpydoc>=0.6.0",
]

[project.urls]
repository = "https://github.com/Australian-Imaging-Service/gold-standard-phantom-metrics"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "gsp_metrics/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["gsp_metrics"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["gsp_metrics"]
exclude = ["tests"]
include = ["./gsp_metrics"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
namespace_packages = true
explicit_package_bases = true
exclude = [
    "tests",
    "scripts",
    "docs",
    "build",
    "dist",
    "phi_finder/_version.py",
]

[tool.codespell]
ignore-words = ".codespell-ignorewords"

[tool.flake8]
doctests = true
per-file-ignores = ["__init__.py:F401"]
max-line-length = 88
select = "C,E,F,W,B,B950"
extend-ignore = ['E203', 'E501', 'E129', 'W503']
